fixing overflow in theater view

--- a/interfaces/crossings/app/css/app.less
+++ b/interfaces/crossings/app/css/app.less
@@ -1980,7 +1980,7 @@ textarea#editcontent {
           padding-top: @theatitHDoublereal + @contentTopPadding;
         }
 
-        min-height: 70%;
+        // min-height: 70%;
 
         .regular();
 
